kubernetes/ingress/devops-toolkit-ingress.yaml
---
# Production Environment
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-toolkit
  namespace: devops-toolkit-production
spec:
  parentRefs:
  - name: global-gateway
    namespace: nginx-gateway
  hostnames:
  - devops-toolkit.dremer10.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: devops-toolkit
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-toolkit
  namespace: devops-toolkit-staging
spec:
  parentRefs:
  - name: global-gateway
    namespace: nginx-gateway
  hostnames:
  - staging-devops-toolkit.dremer10.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: devops-toolkit
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-toolkit
  namespace: devops-toolkit-qa
spec:
  parentRefs:
  - name: global-gateway
    namespace: nginx-gateway
  hostnames:
  - qa-devops-toolkit.dremer10.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: devops-toolkit
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-toolkit
  namespace: devops-toolkit-dev
spec:
  parentRefs:
  - name: global-gateway
    namespace: nginx-gateway
  hostnames:
  - dev-devops-toolkit.dremer10.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: devops-toolkit
      port: 80
