kubernetes/ingress/n8n-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
  - name: global-gateway
    namespace: nginx-gateway
  hostnames:
  - n8n.dremer10.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: n8n
      port: 80
