kubernetes/ingress/prometheus-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: default
spec:
  parentRefs:
  - name: global-gateway
    namespace: nginx-gateway
  hostnames:
  - prometheus.devops-toolkit.dremer10.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus
      port: 9090
